content/nomad/v1.0.x/content/docs/ecosystem.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: Nomad Ecosystem
sidebar_title: Nomad Ecosystem
description: Comparison between Nomad and Kubernetes
---

# Nomad Ecosystem

### Continuous Integration & Delivery

#### GitLab

https://www.hashicorp.com/resources/nomad-ci-cd-developer-workflows-and-integrations

#### Codefresh

https://codefresh.io/docs/docs/yaml-examples/examples/nomad/

#### CircleCI

https://circleci.com/docs/2.0/nomad/

#### Drone

https://docs.drone.io/runner/nomad/overview/

#### Jenkins

https://plugins.jenkins.io/nomad/

#### Buildkite

https://buildkite.com/works-with/hashicorp

### Container Runtime

#### Containerd

https://www.nomadproject.io/docs/drivers/external/containerd

#### Windows IIS

https://github.com/Roblox/nomad-driver-iis

#### Jailtask

https://www.nomadproject.io/docs/drivers/external/jail-task-driver

#### Pot

https://github.com/trivago/nomad-pot-driver

#### Singularity

https://www.nomadproject.io/docs/drivers/external/singularity

#### Firecracker

https://www.nomadproject.io/docs/drivers/external/firecracker-task-driver

#### Podman

https://www.nomadproject.io/docs/drivers/podman

#### LXC

https://www.nomadproject.io/docs/drivers/external/lxc

### Application Definition & Image Build

#### Levant

https://github.com/hashicorp/levant

#### Packer

https://www.packer.io/

#### Waypoint

https://learn.hashicorp.com/collections/waypoint/get-started-nomad

### Container Registry

#### JFrog Artifactory

https://jfrog.com/blog/cluster-management-made-simple-with-jfrog-artifactory-and-hashicorp-nomad/

### Observability and Analysis

#### Prometheus

https://learn.hashicorp.com/tutorials/nomad/prometheus-metrics

https://learn.hashicorp.com/tutorials/nomad/dynamic-application-sizing?in=nomad/nomad-1-0#start-prometheus

#### Grafana

https://www.metricfire.com/blog/monitoring-hashicorp-nomad-with-prometheus-and-grafana/

#### DataDog

https://docs.datadoghq.com/integrations/nomad/

#### Turbonomics

https://www.youtube.com/watch?v=lwtIaPpdDsc

#### Circonus

https://www.hashicorp.com/integrations/circonus/nomad

#### Flowmill

https://www.flowmill.com/blog/announcing-flowmill-s-integration-with-nomad/

#### Sematext

https://www.hashicorp.com/integrations/sematext/nomad

#### Splunk

https://www.kmruddy.com/2020/deploying-splunk-enterprise-with-nomad/

### Secret Management

#### Vault

https://www.nomadproject.io/docs/integrations/vault-integration

### Service Mesh

#### Consul

https://www.nomadproject.io/docs/integrations/consul-integration

### Provisioning

#### Terraform

https://registry.terraform.io/providers/hashicorp/nomad/latest/docs

#### Chef

https://github.com/nathwill/chef-nomad

#### Ansible

https://github.com/ansible-community/ansible-nomad

### Cloud Native Network

#### CNI

https://www.nomadproject.io/docs/integrations/consul-connect#cni-plugins

### Service Proxy

#### Envoy

https://www.nomadproject.io/docs/integrations/consul-connect

#### NGINX

https://learn.hashicorp.com/tutorials/nomad/load-balancing-nginx

#### Traefik

https://learn.hashicorp.com/tutorials/nomad/load-balancing-traefik

### Storage

#### CSI

[CSI](/nomad/docs/internals/plugins/csi)

#### Portworx

https://www.hashicorp.com/integrations/portworx/nomad

### GPUs

#### NVIDIA

https://developer.nvidia.com/blog/hashicorp-nomad-gpu-scheduling/

https://www.hashicorp.com/resources/running-gpu-accelerated-applications-on-nomad

### Autoscaling

#### AWS ASGs

Dynamically autoscale your Nomad clusters

https://www.hashicorp.com/blog/cluster-scaling-with-the-hashicorp-nomad-autoscaler

#### Spot

https://docs.spot.io/container-management/nomad/nomad-integration-with-elastigroup/
