content/nomad/v1.2.x/content/docs/ecosystem.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: Nomad Ecosystem
description: Comparison between Nomad and Kubernetes
---

# Nomad Ecosystem

## Continuous Integration & Delivery

- [GitLab](https://www.hashicorp.com/resources/nomad-ci-cd-developer-workflows-and-integrations)
- [Codefresh](https://codefresh.io/docs/docs/yaml-examples/examples/nomad/)
- [CircleCI](https://circleci.com/docs/server/operator/introduction-to-nomad-cluster-operation)
- [Drone](https://docs.drone.io/runner/nomad/overview/)
- [Jenkins](https://plugins.jenkins.io/nomad/)
- [Buildkite](https://buildkite.com/works-with/hashicorp)

## Task Drivers

- [Containerd](https://www.nomadproject.io/plugins/drivers/community/containerd)
- [Windows IIS](https://github.com/Roblox/nomad-driver-iis)
- [Jailtask](https://www.nomadproject.io/plugins/drivers/community/jail-task-driver)
- [Pot](https://github.com/trivago/nomad-pot-driver)
- [Singularity](https://www.nomadproject.io/plugins/drivers/community/singularity)
- [Firecracker](https://www.nomadproject.io/plugins/drivers/community/firecracker-task-driver)
- [Podman](https://www.nomadproject.io/plugins/drivers/podman)
- [LXC](https://www.nomadproject.io/plugins/drivers/community/lxc)

## Application Definition & Image Build

- [Nomad Pack](https://github.com/hashicorp/nomad-pack)
- [Levant](https://github.com/hashicorp/levant)
- [Packer](https://www.packer.io/)
- [Waypoint](https://learn.hashicorp.com/collections/waypoint/get-started-nomad)

## Container Registry

- [JFrog Artifactory](https://jfrog.com/blog/cluster-management-made-simple-with-jfrog-artifactory-and-hashicorp-nomad/)

## Observability and Analysis

- Prometheus
  - [Using Prometheus to Monitor Nomad Metrics](https://learn.hashicorp.com/tutorials/nomad/prometheus-metrics)
  - [Start Prometheus](https://learn.hashicorp.com/tutorials/nomad/dynamic-application-sizing?in=nomad/nomad-1-0#start-prometheus)
- [Grafana](https://www.metricfire.com/blog/monitoring-hashicorp-nomad-with-prometheus-and-grafana/)
- [DataDog](https://docs.datadoghq.com/integrations/nomad/)
- [Turbonomics](https://www.youtube.com/watch?v=lwtIaPpdDsc)
- [Circonus](https://www.nomadproject.io/tools/autoscaling/agent/telemetry#circonus)
- [Splunk](https://www.kmruddy.com/2020/deploying-splunk-enterprise-with-nomad/)

## Secret Management

- [Vault](https://www.nomadproject.io/docs/integrations/vault-integration)

## Service Mesh

- [Consul](https://www.nomadproject.io/docs/integrations/consul-integration)

## Provisioning

- [Terraform](https://registry.terraform.io/providers/hashicorp/nomad/latest/docs)
- [Chef](https://github.com/nathwill/chef-nomad)
- [Ansible](https://github.com/ansible-community/ansible-nomad)

## Cloud Native Network

- [CNI](https://www.nomadproject.io/docs/integrations/consul-connect#cni-plugins)

## Service Proxy

- [Envoy](https://www.nomadproject.io/docs/integrations/consul-connect)
- [NGINX](https://learn.hashicorp.com/tutorials/nomad/load-balancing-nginx)
- [Traefik](https://learn.hashicorp.com/tutorials/nomad/load-balancing-traefik)

## Storage

- [CSI](https://www.nomadproject.io/docs/concepts/plugins/csi)
- [Portworx](https://learn.hashicorp.com/tutorials/nomad/stateful-workloads-portworx)

## GPUs

- NVIDIA
  - [Using HashiCorp Nomad to Schedule GPU Workloads](https://developer.nvidia.com/blog/hashicorp-nomad-gpu-scheduling/)
  - [Running GPU-Accelerated Applications on Nomad](https://www.hashicorp.com/resources/running-gpu-accelerated-applications-on-nomad)

## Autoscaling

- AWS ASGs
  - [Dynamically autoscale your Nomad clusters](https://www.hashicorp.com/blog/cluster-scaling-with-the-hashicorp-nomad-autoscaler)
- [Spot](https://docs.spot.io/container-management/nomad/nomad-integration-with-elastigroup/)
